--- a/Layouts/DefaultLayout.xml
+++ b/Layouts/DefaultLayout.xml
@@ -2,13 +2,17 @@
 	<AutoHideHost />
 	<Content xsi:type="SplitContainer" AutoHideSize="1403,700" DockedSize="1356,554" DocumentSize="1403,700" FloatingSize="1403,700" Size="1356,554" Orientation="Vertical">
 		<UIElement xsi:type="SplitContainer" AutoHideSize="1403,700" DockedSize="1356,554" DocumentSize="1403,700" FloatingSize="1403,700" Size="1356,554" Orientation="Horizontal">
-			<UIElement xsi:type="SplitContainer" AutoHideSize="1198,700" DockedSize="1040,554" DocumentSize="1198,700" FloatingSize="1198,700" Size="1040,554" Orientation="Vertical">
-				<UIElement xsi:type="SplitContainer" AutoHideSize="1198,395" DockedSize="1040,554" DocumentSize="1403,705" FloatingSize="1198,395" Size="1040,554" Orientation="Horizontal">
-					<UIElement xsi:type="SplitContainer" AutoHideSize="1198,395" DockedSize="1040,554" DocumentSize="1087,705" FloatingSize="1198,395" Size="1040,554" Orientation="Vertical">
-						<UIElement xsi:type="Workspace" AutoHideSize="1198,395" DockedSize="1198,395" DocumentSize="1040,554" FloatingSize="1198,395" Size="1040,554">
-							<Content xsi:type="TabbedMdiHost" />
+			<UIElement xsi:type="SplitContainer" AutoHideSize="1198,700" DockedSize="911,554" DocumentSize="1198,700" FloatingSize="1198,700" Size="911,554" Orientation="Vertical">
+				<UIElement xsi:type="SplitContainer" AutoHideSize="1198,395" DockedSize="911,554" DocumentSize="1403,705" FloatingSize="1198,395" Size="911,554" Orientation="Horizontal">
+					<UIElement xsi:type="SplitContainer" AutoHideSize="1198,395" DockedSize="911,554" DocumentSize="1087,705" FloatingSize="1198,395" Size="911,554" Orientation="Vertical">
+						<UIElement xsi:type="Workspace" AutoHideSize="1198,395" DockedSize="1198,395" DocumentSize="911,554" FloatingSize="1198,395" Size="911,554">
+							<Content xsi:type="TabbedMdiHost">
+								<Content xsi:type="SplitContainer" AutoHideSize="911,554" DockedSize="911,554" DocumentSize="911,554" FloatingSize="911,554" Size="911,554" Orientation="Horizontal">
+									<UIElement xsi:type="TabbedMdiContainer" AutoHideSize="911,554" DockedSize="911,554" DocumentSize="911,554" FloatingSize="911,554" Size="911,554" SelectedWindowUniqueId="7b7637b7-709b-41a3-bba5-7ac40e8f896b" />
+								</Content>
+							</Content>
 						</UIElement>
-						<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="1040,258" DocumentSize="200,200" FloatingSize="200,200" Size="1040,258">
+						<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="911,258" DocumentSize="200,200" FloatingSize="200,200" Size="911,258">
 							<UIElement xsi:type="Track" UniqueId="9cdb7a09-d8f8-46d1-afd7-6f1dece1fbc8" />
 							<UIElement xsi:type="Track" UniqueId="4f5d8d9a-ddec-400a-bbb7-ad867f6fb6e0" />
 						</UIElement>
@@ -78,11 +82,11 @@
 						<UIElement xsi:type="Track" UniqueId="40a3e1e9-6c52-4ac5-9219-700f80826e56" />
 					</UIElement>
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="1040,258" DocumentSize="550,200" FloatingSize="550,200" Size="1040,258">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="911,51" DocumentSize="550,200" FloatingSize="550,200" Size="911,51">
 					<UIElement xsi:type="Track" UniqueId="e70de856-5d28-4edf-abb4-db78a37ac4b5" />
 					<UIElement xsi:type="Track" UniqueId="bb188f4c-a7b6-45e4-83dd-538b1f58db11" />
 				</UIElement>
-				<UIElement xsi:type="SplitContainer" AutoHideSize="200,200" DockedSize="1040,258" DocumentSize="200,200" FloatingSize="200,200" Size="1040,258" Orientation="Horizontal">
+				<UIElement xsi:type="SplitContainer" AutoHideSize="200,200" DockedSize="911,258" DocumentSize="200,200" FloatingSize="200,200" Size="911,258" Orientation="Horizontal">
 					<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="1403,258" DocumentSize="200,200" FloatingSize="200,200" Size="1403,258">
 						<UIElement xsi:type="Track" UniqueId="33bb7849-0192-4e2f-9544-51818b96f690" />
 						<UIElement xsi:type="Track" UniqueId="bfbc6b46-bb59-4f38-a8ab-20d12fa07f9b" />
@@ -94,10 +98,10 @@
 						<UIElement xsi:type="Track" UniqueId="8eca5096-672b-4643-a306-8d7da95e9668" />
 					</UIElement>
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="1040,211" DocumentSize="550,200" FloatingSize="550,200" Size="1040,211">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="911,211" DocumentSize="550,200" FloatingSize="550,200" Size="911,211">
 					<UIElement xsi:type="Track" UniqueId="1cf13a37-04ba-4afb-bdad-23e40714d423" />
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="1040,211" DocumentSize="550,200" FloatingSize="550,200" Size="1040,211">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="550,200" DockedSize="911,211" DocumentSize="550,200" FloatingSize="550,200" Size="911,211">
 					<UIElement xsi:type="Track" UniqueId="3fe4e221-d8c5-4de8-b1be-82731317d420" />
 					<UIElement xsi:type="Track" UniqueId="3e416541-bf55-452b-997b-fe654d20a6cd" />
 					<UIElement xsi:type="Track" UniqueId="92e64e36-150a-4b4e-8788-799b8804c3e2" />
@@ -107,14 +111,14 @@
 					<UIElement xsi:type="Track" UniqueId="c357aee5-1eff-439e-8092-133c12b470c7" />
 				</UIElement>
 			</UIElement>
-			<UIElement xsi:type="SplitContainer" AutoHideSize="200,200" DockedSize="311,554" DocumentSize="200,200" FloatingSize="200,200" Size="311,554" Orientation="Vertical">
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="311,370.182857142857" DocumentSize="200,200" FloatingSize="200,200" Size="311,370.182857142857" SelectedWindowUniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d">
+			<UIElement xsi:type="SplitContainer" AutoHideSize="200,200" DockedSize="440,554" DocumentSize="200,200" FloatingSize="200,200" Size="440,554" Orientation="Vertical">
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="440,554" DocumentSize="200,200" FloatingSize="200,200" Size="440,554" SelectedWindowUniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325">
 					<UIElement xsi:type="ToolWindowRef" UniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d" />
 					<UIElement xsi:type="ToolWindowRef" UniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325" />
 					<UIElement xsi:type="ToolWindowRef" UniqueId="1a5ef5f6-b295-4443-9b5d-5e50bcc004f8" />
 				</UIElement>
-				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="311,178.817142857143" DocumentSize="200,200" FloatingSize="200,200" Size="311,178.817142857143" SelectedWindowUniqueId="2661df08-4ec6-499e-a829-b924c1758b5c">
-					<UIElement xsi:type="ToolWindowRef" UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" />
+				<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,200" DockedSize="440,267.610169491525" DocumentSize="200,200" FloatingSize="200,200" Size="440,267.610169491525">
+					<UIElement xsi:type="Track" UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" />
 				</UIElement>
 			</UIElement>
 			<UIElement xsi:type="ToolWindowContainer" AutoHideSize="200,705" DockedSize="200,554" DocumentSize="200,705" FloatingSize="200,705" Size="200,554">
@@ -314,15 +318,15 @@
 		</RaftingHost>
 	</RaftingHosts>
 	<ToolWindows>
-		<ToolWindow UniqueId="bb188f4c-a7b6-45e4-83dd-538b1f58db11" AutoHideSize="550,200" DockedSize="1249,258" DocumentSize="550,200" FloatingSize="550,200" Size="1249,258" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="ErrorList" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="bb188f4c-a7b6-45e4-83dd-538b1f58db11" AutoHideSize="550,200" DockedSize="1249,51" DocumentSize="550,200" FloatingSize="550,200" Size="1249,51" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="ErrorList" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="e70de856-5d28-4edf-abb4-db78a37ac4b5" AutoHideSize="550,200" DockedSize="1249,258" DocumentSize="550,200" FloatingSize="550,200" Size="1249,258" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="OutputList" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="55337d36-ceeb-4579-84d4-e2a12eb46328" AutoHideSize="200,200" DockedSize="200,200" DocumentSize="200,200" FloatingSize="200,200" Size="200,200" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="CallTree" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="1a5ef5f6-b295-4443-9b5d-5e50bcc004f8" AutoHideSize="200,200" DockedSize="311,370.182857142857" DocumentSize="200,200" FloatingSize="200,200" Size="311,370.182857142857" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="Geometry" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325" AutoHideSize="311,590" DockedSize="311,370.182857142857" DocumentSize="311,590" FloatingSize="311,590" Size="311,370.182857142857" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="Data" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d" AutoHideSize="200,200" DockedSize="311,370.182857142857" DocumentSize="200,200" FloatingSize="200,200" Size="311,370.182857142857" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="CellExplorer" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="1a5ef5f6-b295-4443-9b5d-5e50bcc004f8" AutoHideSize="200,200" DockedSize="311,554" DocumentSize="200,200" FloatingSize="200,200" Size="311,554" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="Geometry" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="06d03f51-3499-4aaf-8fcf-f5474d1ce325" AutoHideSize="311,590" DockedSize="311,554" DocumentSize="311,590" FloatingSize="311,590" Size="311,554" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="Data" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="3dee95ba-ff20-4757-9457-68b527aaa48d" AutoHideSize="200,200" DockedSize="311,554" DocumentSize="200,200" FloatingSize="200,200" Size="311,554" IsOpen="true" LastCloseReason="Other" LastState="Docked" Name="CellExplorer" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="25838486-425f-49d2-91b1-32803c688129" AutoHideSize="200,200" DockedSize="200,200" DocumentSize="200,200" FloatingSize="312,372" Size="200,200" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="FindAndReplace" RaftingLocation="845,338" StandardMdiBounds="0,0,300,200" State="Floating" />
 		<ToolWindow UniqueId="4478f260-d6ed-45ea-8321-f075dae88982" AutoHideSize="550,200" DockedSize="1403,300" DocumentSize="550,200" FloatingSize="550,200" Size="1403,300" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="FindResults" StandardMdiBounds="0,0,300,200" State="Docked" />
-		<ToolWindow UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" AutoHideSize="200,200" DockedSize="311,178.817142857143" DocumentSize="200,200" FloatingSize="200,200" Size="311,178.817142857143" IsOpen="true" LastCloseReason="Other" LastState="Floating" Name="Properties" RaftingLocation="1342,770" StandardMdiBounds="0,0,300,200" State="Docked" />
+		<ToolWindow UniqueId="2661df08-4ec6-499e-a829-b924c1758b5c" AutoHideSize="200,200" DockedSize="311,178.817142857143" DocumentSize="200,200" FloatingSize="200,200" Size="311,178.817142857143" IsOpen="false" LastCloseReason="Other" LastState="Floating" Name="Properties" RaftingLocation="1342,770" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="59225f2f-c9b1-4148-b052-0c0a6b60a81b" AutoHideSize="200,200" DockedSize="1403,258" DocumentSize="200,200" FloatingSize="200,200" Size="1403,258" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="Breakpoints" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="bfbc6b46-bb59-4f38-a8ab-20d12fa07f9b" AutoHideSize="200,200" DockedSize="1403,258" DocumentSize="200,200" FloatingSize="200,200" Size="1403,258" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="CallStack" StandardMdiBounds="0,0,300,200" State="Docked" />
 		<ToolWindow UniqueId="c2d491ae-818b-451a-93fc-7ea7eb22d456" AutoHideSize="200,200" DockedSize="1403,258" DocumentSize="200,200" FloatingSize="200,200" Size="1403,258" IsOpen="false" LastCloseReason="Other" LastState="Docked" Name="CommandLine" StandardMdiBounds="0,0,300,200" State="Docked" />
